# docs/swagger.json
@@ -195,41 +195,6 @@
                 }
             }
         },
-        "/service/add_grpc": {
-            "post": {
-                "description": "添加grpc服务",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "service管理"
-                ],
-                "summary": "添加grpc服务",
-                "operationId": "/service/add_grpc",
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.ServiceAddGrpcInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "$ref": "#/definitions/middleware.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/service/add_http": {
             "post": {
                 "description": "添加HTTP服务",
@@ -433,41 +398,6 @@
                         "name": "id",
                         "in": "query",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "$ref": "#/definitions/middleware.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/service/update_grpc": {
-            "post": {
-                "description": "更新grpc服务",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "service管理"
-                ],
-                "summary": "更新grpc服务",
-                "operationId": "/service/update_grpc",
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.ServiceUpdateGrpcInput"
-                        }
                     }
                 ],
                 "responses": {
@@ -799,60 +729,6 @@
                 }
             }
         },
-        "dto.ServiceAddGrpcInput": {
-            "type": "object",
-            "required": [
-                "ip_list",
-                "port",
-                "service_desc",
-                "service_name",
-                "weight_list"
-            ],
-            "properties": {
-                "black_list": {
-                    "type": "string"
-                },
-                "clientip_flow_limit": {
-                    "type": "integer"
-                },
-                "forbid_list": {
-                    "type": "string"
-                },
-                "header_transfor": {
-                    "type": "string"
-                },
-                "ip_list": {
-                    "type": "string"
-                },
-                "open_auth": {
-                    "type": "integer"
-                },
-                "port": {
-                    "type": "integer"
-                },
-                "round_type": {
-                    "type": "integer"
-                },
-                "service_desc": {
-                    "type": "string"
-                },
-                "service_flow_limit": {
-                    "type": "integer"
-                },
-                "service_name": {
-                    "type": "string"
-                },
-                "weight_list": {
-                    "type": "string"
-                },
-                "white_host_name": {
-                    "type": "string"
-                },
-                "white_list": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.ServiceAddHttpInput": {
             "type": "object",
             "required": [
@@ -970,64 +846,6 @@
                 },
                 "header_transfor": {
                     "type": "string"
-                },
-                "ip_list": {
-                    "type": "string"
-                },
-                "open_auth": {
-                    "type": "integer"
-                },
-                "port": {
-                    "type": "integer"
-                },
-                "round_type": {
-                    "type": "integer"
-                },
-                "service_desc": {
-                    "type": "string"
-                },
-                "service_flow_limit": {
-                    "type": "integer"
-                },
-                "service_name": {
-                    "type": "string"
-                },
-                "weight_list": {
-                    "type": "string"
-                },
-                "white_host_name": {
-                    "type": "string"
-                },
-                "white_list": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.ServiceUpdateGrpcInput": {
-            "type": "object",
-            "required": [
-                "id",
-                "ip_list",
-                "port",
-                "service_desc",
-                "service_name",
-                "weight_list"
-            ],
-            "properties": {
-                "black_list": {
-                    "type": "string"
-                },
-                "clientip_flow_limit": {
-                    "type": "integer"
-                },
-                "forbid_list": {
-                    "type": "string"
-                },
-                "header_transfor": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "ip_list": {
                     "type": "string"
